--- a/vue-murex-frontend/assets/scss/mixins.scss
+++ b/vue-murex-frontend/assets/scss/mixins.scss
@@ -16,3 +16,8 @@
   align-items: center;
   justify-content: center;
 }
+@mixin dflex-align-justify-between {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
