--- a/vue-murex-frontend/assets/scss/variables.scss
+++ b/vue-murex-frontend/assets/scss/variables.scss
@@ -1,4 +1,12 @@
-$black: #333333;
+// @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
+// @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
+$default-font: 'Poppins', 'Pretendard', sans-serif;
+
+// Black
+$black-1: #181818;
+$black-2: #333333;
+
 $blue: #2f69e8;
 $red: #ed2c2c;
 $white: #ffffff;
