--- a/vue-murex-frontend/assets/scss/variables.scss
+++ b/vue-murex-frontend/assets/scss/variables.scss
@@ -3,10 +3,18 @@
 
 $default-font: 'Poppins', 'Pretendard', sans-serif;
 
+// white
+$white: #ffffff;
+
 // Black
 $black-1: #181818;
 $black-2: #333333;
 
+// Grey
+$grey-1: #CFCFCF;
+$grey-2: #828282;
+
+
+
 $blue: #2f69e8;
 $red: #ed2c2c;
-$white: #ffffff;
