--- a/vue-murex-frontend/assets/scss/mixins.scss
+++ b/vue-murex-frontend/assets/scss/mixins.scss
@@ -21,3 +21,22 @@
   align-items: center;
   justify-content: space-between;
 }
+
+// Heading
+@mixin heading-1 {
+  font-family: $default-font;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 52px;
+  line-height: 100%;
+  letter-spacing: -0.02em;
+  color: $black-1;
+}
+@mixin heading-2 {
+  font-family: $default-font;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 32px;
+  line-height: 100%;
+  color: $black-1;
+}
