--- a/vue-murex-frontend/assets/scss/icons.scss
+++ b/vue-murex-frontend/assets/scss/icons.scss
@@ -40,4 +40,18 @@
   width: 20px;
   display: inline-block;
 }
+.icon-fb {
+  background: url('~assets/icons/facebook.svg') no-repeat center center;
+  background-size: 100%;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
+}
+.icon-ln {
+  background: url('~assets/icons/linkedin.svg') no-repeat center center;
+  background-size: 100%;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
+}
 
