--- a/vue-murex-frontend/assets/scss/icons.scss
+++ b/vue-murex-frontend/assets/scss/icons.scss
@@ -54,4 +54,11 @@
   width: 32px;
   display: inline-block;
 }
+.icon-menu {
+  background: url('~assets/icons/menu.svg') no-repeat center center;
+  background-size: 100%;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
+}
 
