--- a/vue-murex-frontend/assets/scss/icons.scss
+++ b/vue-murex-frontend/assets/scss/icons.scss
@@ -57,8 +57,22 @@
 .icon-menu {
   background: url('~assets/icons/menu.svg') no-repeat center center;
   background-size: 100%;
-  height: 32px;
-  width: 32px;
+  height: 18px;
+  width: 26px;
+  display: inline-block;
+}
+.icon-menu-violet-bg {
+  background: url('~assets/icons/menu-violetBg.svg') no-repeat center center;
+  background-size: 100%;
+  height: 18px;
+  width: 26px;
+  display: inline-block;
+}
+.icon-cross {
+  background: url('~assets/icons/cross.svg') no-repeat center center;
+  background-size: 100%;
+  height: 19px;
+  width: 19px;
   display: inline-block;
 }
 
