--- a/vue-murex-frontend/assets/scss/variables.scss
+++ b/vue-murex-frontend/assets/scss/variables.scss
@@ -11,13 +11,18 @@ $black-1: #181818;
 $black-2: #333333;
 $black-3: #000000;
 
+
 // Grey
 $grey-1: #CFCFCF;
 $grey-2: #828282;
 $grey-3: #E0E0E0;
 $grey-4: #A4A4A4;
+$grey-5: #4C4C4C;
 
 
 
 $blue: #2f69e8;
 $red: #ed2c2c;
+
+// purple
+$purple-1: #57195C;
