--- a/vue-murex-frontend/assets/scss/icons.scss
+++ b/vue-murex-frontend/assets/scss/icons.scss
@@ -75,4 +75,18 @@
   width: 19px;
   display: inline-block;
 }
+.icon-linkedin-dark {
+  background: url('~assets/icons/linkedin-dark.svg') no-repeat center center;
+  background-size: 100%;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
+}
+.icon-facebook-dark {
+  background: url('~assets/icons/facebook-dark.svg') no-repeat center center;
+  background-size: 100%;
+  height: 32px;
+  width: 32px;
+  display: inline-block;
+}
 
