--- a/vue-murex-frontend/assets/scss/mixins.scss
+++ b/vue-murex-frontend/assets/scss/mixins.scss
@@ -72,6 +72,9 @@
   line-height: 130%;
   letter-spacing: 0.02em;
   color: $white;
+  @media screen and (max-width: 767px) {
+    font-size: 14px;
+  }
 }
 @mixin white-text-2 {
   font-family: $default-font;
@@ -80,4 +83,7 @@
   font-size: 14px;
   line-height: 17px;
   color: $white;
+  @media screen and (max-width: 767px) {
+    font-size: 10px;
+  }
 }
