--- a/vue-murex-frontend/assets/scss/general.scss
+++ b/vue-murex-frontend/assets/scss/general.scss
@@ -20,3 +20,9 @@ body,html {
 .heading-2 {
   @include heading-2;
 }
+.fluidContainer {
+  padding: 0 36px;
+  @media screen and (max-width: 767px) {
+    padding: 0;
+  }
+}
