--- a/vue-murex-frontend/assets/scss/mixins.scss
+++ b/vue-murex-frontend/assets/scss/mixins.scss
@@ -21,6 +21,11 @@
   align-items: center;
   justify-content: space-between;
 }
+@mixin  dflex-column-between {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 // Heading
 @mixin heading-1 {
