--- a/vue-murex-frontend/assets/scss/mixins.scss
+++ b/vue-murex-frontend/assets/scss/mixins.scss
@@ -60,6 +60,9 @@
   font-size: 18px;
   line-height: 150%;
   color: $black-1;
+  @media screen and (max-width: 767px) {
+    font-size: 16px;
+  }
 }
 @mixin black-text-2 {
   font-family: $default-font;
