--- a/vue-murex-frontend/assets/scss/_variables.scss
+++ b/vue-murex-frontend/assets/scss/_variables.scss
@@ -1,7 +1,10 @@
 // @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap');
 // @import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&family=Roboto:wght@300&display=swap');
 
 $default-font: 'Poppins', 'Pretendard', sans-serif;
+$secondery-font: 'Noto Sans', sans-serif;
+
 
 // white
 $white: #ffffff;
